--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "../node_modules/pusher-js/dist/web/pusher.min.js"
             ]
           },
           "configurations": {
