--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
               "src/styles.css",
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "../node_modules/pusher-js/dist/web/pusher.min.js"
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
