--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@fullcalendar/angular": "^5.4.0",
+    "@fullcalendar/core": "^5.4.0",
+    "@fullcalendar/daygrid": "^5.4.0",
+    "@fullcalendar/interaction": "^5.4.0",
     "g": "^2.0.1",
     "jquery": "^3.5.1",
+    "laravel-echo": "^1.9.0",
     "ng2-tooltip-directive": "^2.9.22",
+    "pusher-js": "^7.0.1",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
     "sweetalert2": "^9.15.2",
