--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fullcalendar/core": "^5.4.0",
     "@fullcalendar/daygrid": "^5.4.0",
     "@fullcalendar/interaction": "^5.4.0",
+    "@popperjs/core": "^2.5.4",
+    "bootstrap": "^4.5.3",
     "g": "^2.0.1",
     "jquery": "^3.5.1",
     "laravel-echo": "^1.9.0",
