--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@popperjs/core": "^2.5.4",
     "bootstrap": "^4.5.3",
     "g": "^2.0.1",
+    "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.1",
+    "jspdf": "^1.5.3",
     "laravel-echo": "^1.9.0",
     "moment": "^2.29.1",
     "ng2-tooltip-directive": "^2.9.22",
@@ -42,8 +44,10 @@
     "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/cli": "^11.0.2",
     "@angular/compiler-cli": "~11.0.2",
+    "@types/html2canvas": "0.0.36",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
